--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.4.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.22",
+    "multer": "^1.4.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
